force-app/main/default/objects/Changes_Required__c/Changes_Required__c.object-meta.xml
<CustomObject>
    <label>Changes Required</label>
    <nameField>
        <displayFormat>CN-{000000}</displayFormat>
        <label>Concern Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Changes REquired</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>