force-app/main/default/objects/Changes_Required__c/fields/Change_Required__c.field-meta.xml
<CustomField>
    <fullName>Change_Required__c</fullName>
    <label>Change Required</label>
    <type>TextArea</type>
</CustomField>