force-app/main/default/objects/Changes_Required__c/fields/Concern__c.field-meta.xml
<CustomField>
    <fullName>Concern__c</fullName>
    <label>Concern</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>