force-app/main/default/objects/Changes_Required__c/fields/Document__c.field-meta.xml
<CustomField>
    <fullName>Document__c</fullName>
    <label>Document</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Application</fullName>
            </value>
            <value>
                <fullName>Evidence of Education</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>